tests/spec/non_conformant/errors/fn_saturate_out_of_range.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-saturate-out-of-range.hrx"

// Ignoring "test", error tests are not supported yet.
